--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
 <html>
   <head>
+    <title>Login</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	  <link rel="stylesheet" href="login.css">
     <script type="text/javascript" src="login.js"></script>
